--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
     "@angular/http": "6.0.0",
     "@angular/platform-browser": "6.0.0",
     "@angular/platform-browser-dynamic": "6.0.0",
+    "@ionic-native/call-number": "^4.18.0",
     "@ionic-native/core": "~4.20.0",
+    "@ionic-native/sms": "^4.18.0",
     "@ionic-native/splash-screen": "~4.20.0",
     "@ionic-native/status-bar": "~4.20.0",
     "@ionic/storage": "2.2.0",
+    "call-number": "1.0.1",
     "chart.js": "^2.8.0",
     "cordova-android": "^8.1.0",
+    "cordova-sms-plugin": "1.0.0",
     "firebase": "^6.6.1",
     "ionic-angular": "3.9.5",
     "ionicons": "3.0.0",
@@ -55,7 +59,9 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "mx.ferreyra.callnumber": {},
+      "cordova-sms-plugin": {}
     },
     "platforms": [
       "android"
