--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "6.0.0",
     "@ionic-native/call-number": "^4.18.0",
     "@ionic-native/core": "~4.20.0",
+    "@ionic-native/date-picker": "^4.18.0",
     "@ionic-native/sms": "^4.18.0",
     "@ionic-native/splash-screen": "~4.20.0",
     "@ionic-native/status-bar": "~4.20.0",
@@ -30,6 +31,7 @@
     "call-number": "1.0.1",
     "chart.js": "^2.8.0",
     "cordova-android": "^8.1.0",
+    "cordova-plugin-datepicker": "0.9.3",
     "cordova-sms-plugin": "1.0.0",
     "firebase": "^6.6.1",
     "ionic-angular": "3.9.5",
@@ -61,7 +63,8 @@
       },
       "cordova-plugin-ionic-keyboard": {},
       "mx.ferreyra.callnumber": {},
-      "cordova-sms-plugin": {}
+      "cordova-sms-plugin": {},
+      "cordova-plugin-datepicker": {}
     },
     "platforms": [
       "android"
